RESOLVED FIXED21944
Can't set a breakpoint on the statement after a single line "else"
https://bugs.webkit.org/show_bug.cgi?id=21944
Summary Can't set a breakpoint on the statement after a single line "else"
Timothy Hatcher
Reported 2008-10-28 23:29:53 PDT
The line that calls test() is never hit. if (false) debugger; // This should not be hit. else test(); // Breakpoints on this line are not hit.
Attachments
Test (479 bytes, text/html)
2008-10-28 23:30 PDT, Timothy Hatcher
no flags
Proposed Patch (4.38 KB, patch)
2008-10-28 23:47 PDT, Timothy Hatcher
mjs: review+
Timothy Hatcher
Comment 1 2008-10-28 23:30:23 PDT
Timothy Hatcher
Comment 2 2008-10-28 23:47:13 PDT
Created attachment 24741 [details] Proposed Patch
Maciej Stachowiak
Comment 3 2008-10-28 23:48:40 PDT
Comment on attachment 24741 [details] Proposed Patch r=me
Cameron Zwarich (cpst)
Comment 4 2008-10-28 23:51:14 PDT
Comment on attachment 24741 [details] Proposed Patch r=me
Timothy Hatcher
Comment 5 2008-10-29 08:02:51 PDT
Landed in r37972.
Note You need to log in before you can comment on or make changes to this bug.