Emit the WillExecuteStatement debugger hook before the "else" body when there is no block for the "else" body. This allows breakpoints on those statements in the Web Inspector.

JavaScriptCore:

2008-10-28  Timothy Hatcher  <timothy@apple.com>

        Emit the WillExecuteStatement debugger hook before the "else" body
        when there is no block for the "else" body. This allows breakpoints
        on those statements in the Web Inspector.

        https://bugs.webkit.org/show_bug.cgi?id=21944

        Reviewed by Maciej Stachowiak.

        * kjs/nodes.cpp:
        (JSC::IfElseNode::emitCode): Emit the WillExecuteStatement
        debugger hook before the else node if isn't a block.

WebCore:

2008-10-28  Timothy Hatcher  <timothy@apple.com>

        Add a manual test that checks breakpoints on a blockless body of
        an "else" statement.

        https://bugs.webkit.org/show_bug.cgi?id=21944

        Reviewed by Maciej Stachowiak.

        * manual-tests/inspector/debugger-pause-on-else-statements.html: Added.

Canonical link: https://commits.webkit.org/30190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37972 268f45cc-cd09-0410-ab3c-d52691b4dbfc