JavaScriptCore/kjs/nodes.cpp
@@ -1158,6 +1158,10 @@ RegisterID* IfElseNode::emitCode(CodeGenerator& generator, RegisterID* dst)
     generator.emitJump(afterElse.get());
 
     generator.emitLabel(beforeElse.get());
+
+    if (!m_elseBlock->isBlock())
+        generator.emitDebugHook(WillExecuteStatement, m_elseBlock->firstLine(), m_elseBlock->lastLine());
+
     generator.emitNode(dst, m_elseBlock.get());
 
     generator.emitLabel(afterElse.get());
